# FilterDeMystifier

./: LICENSE  README.md
Documentation_Manual/: Manual.md
Resources/presets/: ButterworthBandpass.xml  ButterworthLow_6k.xml  EllipLow_4k.xml  FIR_linear_phase.xml  Moog_Ladder.xml  SEM_like.xml  Schwa (open mouth).xml  Schwa_(open_mouth).xml  aa.xml  allpass.xml  butterworthBandpass.xml  cheby1_low_5k.xml  cheby2_low_5k.xml  ee.xml  ii.xml  peak_1k_simple.xml  peak_analog.xml  peak_simple.xml  shelf_high.xml  shelf_low.xml  tenor_aa.xml  uu.xml
Source/: AboutBoxComponent.h  BodeDiagramComponent.h  BodeMagnitudeComponent.cpp  BodeMagnitudeComponent.h  BodePhaseComponent.cpp  BodePhaseComponent.h  BrickwallLimiter.cpp  BrickwallLimiter.h  CMakeLists.txt  JadeLookAndFeel.cpp  JadeLookAndFeel.h  MainComponent.cpp  MainComponent.h  OpenGLAppClass.h  PNComponent.h  PNParameter.h  PNcontrolComponent.cpp  PNcontrolComponent.h  PNplot.cpp  PNplot.h  PluginEditor.cpp  PluginEditor.h  PluginGUISettings.h  PluginProcessor.cpp  PluginProcessor.h  PresetHandler.cpp  PresetHandler.h  ProtectionComponent.h  SOSFilter.h  ScaledPlot.h  SimpleMeter.cpp  SimpleMeter.h  TransferFun3DComponent.h  TransferFunLookAndFeel.cpp  TransferFunLookAndFeel.h  WavefrontObjFile.h
